[package]
name = "grapple"
version = "0.3.0"
authors = ["Dave Allie <dave@daveallie.com>"]

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
incremental = false

[dependencies]
reqwest = "~0.8.0"
url = "~1.7"
base64 = "~0.9.2"
md5 = "~0.3.8"
lazy_static = "~1.1"
pbr = "~1.0.1"

[dependencies.clap]
version = "~2.32"
features = ["yaml"]

[dependencies.uuid]
version = "~0.6.5"
features = ["v4"]

[features]
default = []
