[package]
name = "grapple"
version = "0.3.1"
authors = ["Dave Allie <dave@daveallie.com>"]
description = "Interruptible, download accelerator, with Basic and Digest Authentication support."
documentation = "https://github.com/daveallie/grapple"
homepage = "https://github.com/daveallie/grapple"
repository = "https://github.com/daveallie/grapple"
readme = "README.md"
license = "MIT"
keywords = ["download", "accelerator"]
exclude = [
    ".idea/*",
    "docs/*",
]

[badges]
travis-ci = { repository = "daveallie/grapple" }

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
incremental = false

[dependencies]
reqwest = "~0.8.0"
url = "~1.7"
base64 = "~0.9.2"
md5 = "~0.3.8"
lazy_static = "~1.1"
pbr = "~1.0.1"

[dependencies.clap]
version = "~2.32"
features = ["yaml"]

[dependencies.uuid]
version = "~0.6.5"
features = ["v4"]

[features]
default = []
